Fixes white space problem and page redirect problems.

--- a/CyberDayInformationSystem/Styling-Master.css
+++ b/CyberDayInformationSystem/Styling-Master.css
@@ -41,6 +41,7 @@ p {
 .PgTitle {
     background-color: #F4EFE1;
     text-align: left;
+    margin-top: -20px;
 }
 
 .TopBar {
